--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@ui-kitten/components": "^5.1.2",
+    "axios": "^0.27.2",
     "react": "18.1.0",
     "react-native": "0.70.4",
     "react-native-safe-area-context": "^4.4.1",
